--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -21,8 +21,8 @@ jobs:
       env:
         VALID_USERNAME: ${{ secrets.VALID_USERNAME }}
         VALID_PASS: ${{ secrets.VALID_PASS }}
-        INVALID_USERNAME: ${{ secrets.VALID_USERNAME }}
-        INVALID_PASS: ${{ secrets.VALID_PASS }}
+        INVALID_USERNAME: ${{ secrets.INVALID_USERNAME }}
+        INVALID_PASS: ${{ secrets.INVALID_PASS }}
       run: npx playwright test
     - uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
