--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@playwright/test": "^1.58.2",
     "@types/node": "^25.2.3",
-    "dotenv": "^17.3.1"
+    "dotenv": "^17.3.1",
+    "prettier": "^3.8.1"
   }
 }
